[gd_scene load_steps=5 format=3 uid="uid://bqd2v4m3x1cx4"]

[ext_resource type="PackedScene" uid="uid://dqkqd11wajc8k" path="res://scenes/Background.tscn" id="1_83m3r"]
[ext_resource type="Script" path="res://scripts/Main.gd" id="2_5xnqp"]
[ext_resource type="PackedScene" uid="uid://cpshykmvql37g" path="res://scenes/Bird.tscn" id="3_6kr2t"]

[node name="Main" type="Node2D"]
script = ExtResource("2_5xnqp")

[node name="Background" parent="." instance=ExtResource("1_83m3r")]

[node name="Bird" parent="." instance=ExtResource("3_6kr2t")]

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 80.0
text = "0"
horizontal_alignment = 1

[node name="GameOverUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOverLabel" type="Label" parent="UI/GameOverUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
text = "Game Over
SPACE = Home Screen
R = Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PauseBackground" type="ColorRect" parent="UI/PauseUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PausePanel" type="Panel" parent="UI/PauseUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseUI/PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="PauseTitle" type="Label" parent="UI/PauseUI/PausePanel/VBoxContainer"]
layout_mode = 2
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/PauseUI/PausePanel/VBoxContainer"]
layout_mode = 2

[node name="ScoreDisplay" type="Label" parent="UI/PauseUI/PausePanel/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="UI/PauseUI/PausePanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ResumeButton" type="Button" parent="UI/PauseUI/PausePanel/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="RestartButton" type="Button" parent="UI/PauseUI/PausePanel/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="HomeButton" type="Button" parent="UI/PauseUI/PausePanel/VBoxContainer"]
layout_mode = 2
text = "HOME SCREEN"


